# sample_app

./: .gitignore  README.md  settings.gradle
app/: .gitignore  build.gradle  download.gradle
app/src/androidTest/java/com/github/brokenegg/transformer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: brokenegg.en-es-ja.spm64k.model
app/src/main/cpp/: CMakeLists.txt  tokenize.cpp  translator.cpp
app/src/main/java/com/github/brokenegg/transformer/: MainActivity.kt  Translator.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/github/brokenegg/transformer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
